Fixing white space at the end of game selection page.

--- a/docs/css/cards.css
+++ b/docs/css/cards.css
@@ -113,6 +113,8 @@
 .flex-grid {
   display: flex;
   margin-top: -5px;
+  margin-bottom: -5px;
+  align-items: center;
 }
 
 .flex-grid .col {
