--- a/docs/css/navbar.css
+++ b/docs/css/navbar.css
@@ -19,6 +19,7 @@ body {
 
 .navbar {
   width: 100%;
+  background-color: #000;
   box-shadow: 0 1px 4px rgb(146 161 176 / 15%);
 }
 
@@ -145,7 +146,7 @@ body {
 }
 
 .game-selection {
-    background-color: #000;
+    background-color: salmon;
     margin-top: -5px;
     /* height: 190%; */
 }
