--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,12 +1,11 @@
-*, body, html {
+body, html {
  margin: 0px;
  padding: 0px;
- box-sizing: border-box;
+ height: 100%;
 }
 
 
 body {
-  margin:0;
   /*background: linear-gradient(90deg, rgba(203,14,190,1) 0%, rgba(203,14,190,1) 33%, rgba(0,153,255,1) 100%);*/
 font-family: 'PT Sans', sans-serif;
   color: #000;
